<resources>
    <string name="app_name" translatable="false">MOVAhome</string>
    <string name="privacy_policy_title_first">Welcome to MOVAhome App!</string>
    <string name="privacy_policy_title_second">Please read carefully and agree with User Agreement and Privacy Policy to allow us to collect, use, store, and share your information. </string>
    <string name="privacy_policy_title_third">With it you are obtaining a high-quality product that is engineered for optimal performance, achieving intelligent remote control, connection, device sharing and other functions.</string>
    <string name="privacy_policy_quit">Exit</string>
    <string name="privacy_policy_agree">Agree and continue</string>
    <string name="login">Log In</string>
    <string name="register">Sign Up</string>
    <string name="create_account">Create your MOVAhome App account</string>
    <string name="mainland">Mainland China</string>
    <string name="enter_mobile">Mobile number</string>
    <string name="reg_by_mail">Sign up with email</string>
    <string name="terms_uncheck">I have read and agreed User Agreement and Privacy Policy</string>
    <string name="send_success">A code has been sent to you.</string>
    <string name="send_sms_code_error">Failed to send you a code.</string>
    <string name="send_sms_too_frequent">Too many attempts, please try again later...</string>
    <string name="sms_code_invalid">Incorrect verification code</string>
    <string name="send_sms_too_much">Exceeded number of verification code requests. Please try again in 2 hours.</string>
    <string name="know">OK</string>
    <string name="already_send">%ds</string>
    <string name="account_has_registered">The mobile number has been signed up. Log in now?</string>
    <string name="email_has_registered">The email has been signed up. Log in now?</string>
    <string name="get_sms_code">Please get code sent first.</string>
    <string name="mobile_invalid">Invalid mobile number, please re-enter.</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login_now">Log in now</string>
    <string name="read_terms">I have read and agreed User Agreement and Privacy Policy.</string>
    <string name="register_success">Succeeded. Welcome to join in MOVAhome App.</string>
    <string name="register_failed">Failed to sign up</string>
    <string name="please_confirm_psw">Confirm password</string>
    <string name="pwd_valid">Password must be 8 to16 characters in length and can contain letters, digits, and/or special characters.</string>
    <string name="enter_confirm_pwd">Confirm password</string>
    <string name="pwd_different">Passwords do NOT match. Please try again.</string>
    <string name="pwd_modify_success">Password has been changed. Please log in again.</string>
    <string name="login_title">Log in to MOVAhome App</string>
    <string name="login_user_hint">Mobile number/email/MOVA ID</string>
    <string name="forgot_pwd">Forgot password?</string>
    <string name="login_by_code">Log in with verification code</string>
    <string name="login_success">Welcome back</string>
    <string name="login_failed">Login failed</string>
    <string name="user_not_exist">The requested user does NOT exist.</string>
    <string name="user_password_not_match">Invalid password</string>
    <string name="password_error_exceeded_the_maximum">Too many attempts, the account has been locked. Please try again later or retrieve your password?</string>
    <string name="pwd_error">Invalid password</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="reg_now">Sign up now</string>
    <string name="prompt_not_register">The requested user does NOT exist.</string>
    <string name="account_pwd_login">Log in with password</string>
    <string name="reset_psw">Reset password</string>
    <string name="use_email_reset_password">Reset password with email</string>
    <string name="phone_not_registered">The requested user does NOT exist.</string>
    <string name="reset_input_new_password">Enter new password</string>
    <string name="operate_success">Succeeded</string>
    <string name="operate_failed">Failed</string>
    <string name="reset_password_success">Your password has been reset. Log in now?</string>
    <string name="email_not_registered">The requested user does NOT exist.</string>
    <string name="please_input_email">Enter email address</string>
    <string name="use_phone_reset_password">Reset password with mobile number</string>
    <string name="send_email_code_error">Failed to send you a verification code with email.</string>
    <string name="email_code_invalid">Invalid code</string>
    <string name="email_too_long">Email address must be less than 45 characters in length.</string>
    <string name="mail_address">Email address</string>
    <string name="enter_pwd">Password</string>
    <string name="confirm_pwd">Confirm password</string>
    <string name="reg_by_phone">Sign up with mobile number</string>
    <string name="mail_error">Invalid email</string>
    <string name="enter_new_pwd">New password</string>
    <string name="confirm_new_pwd">Confirm password</string>
    <string name="welcome">My Home</string>
    <string name="add_device">Add</string>
    <string name="device">Device</string>
    <string name="device_empty">You have NOT yet added any device.</string>
    <string name="device_online">Connected</string>
    <string name="device_offline">Offline</string>
    <string name="cleaning">Cleaning</string>
    <string name="standby">Standby</string>
    <string name="pause">Paused</string>
    <string name="goto_charging">Returning Charge</string>
    <string name="charging">Charging</string>
    <string name="share_device_invalid">Unable to share this device</string>
    <string name="wifi_ssid_empty">A Wi-Fi name (SSID) is required.</string>
    <string name="enter_wifi_pwd">Wi-Fi passsword</string>
    <string name="select_wifi">Connect to Wi-Fi network</string>
    <string name="select_device">Add Device</string>
    <string name="next">Next</string>
    <string name="rest_wifi_confirm_operation">I have heard the voice prompt of Wi-Fi reset.</string>
    <string name="rest_device_wifi">Connect to Wi-Fi Network</string>
    <string name="device_connect_prepare_tip_1">1. Wi-Fi coverage: For a good Wi-Fi connection, place your phone and device/station to the area in a good Wi-Fi coverage.</string>
    <string name="device_connect_prepare_tip_2">2. Location permission: The location permission is required for Wi-Fi network connection.</string>
    <string name="device_connect_prepare_tip_3">3. 2.4GHz Wi-Fi network: In order to connect the device, please make sure the 2.4GHz Wi-Fi network or 2.4GHz/5GHz mixed Wi-Fi network is working.</string>
    <string name="device_connect_prepare_tip_4">4. If your home router is broadcasting two networks, with different names to indicate the 2.4GHz and 5GHz bands. Make sure your phone is connecting to the 2.4GHz network.</string>
    <string name="input_wifi_tips">Please make sure the connected home Wi-Fi network is 2.4GHz or 2.4/5GHz mixed network.</string>
    <string name="wifi_unconnected">Your phone Wi-Fi (WLAN) is off, please turn it on and try again.</string>
    <string name="change_other_wifi">Change to another Wi-Fi network</string>
    <string name="connecting">Connecting to Wi-Fi network</string>
    <string name="phone_connecting_device">Your phone is connecting the device.</string>
    <string name="phone_connect_device_success">Your phone has connected the device.</string>
    <string name="phone_connect_device_failed">Failed</string>
    <string name="sending_data_to_device">Your device is receiving Wi-Fi network data.</string>
    <string name="send_data_to_device_success">Your device has received Wi-Fi network data.</string>
    <string name="send_data_to_device_failed">Failed</string>
    <string name="query_devices_state">Your device is connecting to the network.</string>
    <string name="query_devices_state_success">Your device has connected to the network.</string>
    <string name="query_devices_state_failed">Failed</string>
    <string name="retry">Retry</string>
    <string name="complete">Finished</string>
    <string name="go_setting_wifi">Configure Wi-Fi Connection</string>
    <string name="turn_on_location">The system Location permission is requested to search the devices nearby.</string>
    <string name="device_wifi_connect_failed">Please return to MOVAhome App after your phone is connected to the Wi-Fi named mova-vacuum-xx-miapxxxx.</string>
    <string name="wifi_has_no_password">Your Wi-Fi network does NOT have a password？</string>
    <string name="input_wifi_password">Enter password</string>
    <string name="yes">OK</string>
    <string name="searching_wifi_devices">Searching for devices nearby</string>
    <string name="searching_wifi_devices_no">No devices found. Try to connect manually.</string>
    <string name="setting">Settings</string>
    <string name="my_message">Messages</string>
    <string name="delete">Delete</string>
    <string name="set_all_read">All read</string>
    <string name="message_all_read">No unread messages</string>
    <string name="message_list_empty">No messages</string>
    <string name="message_delete_device_message_confirm">Are you sure you want to delete the messages on this device?</string>
    <string name="message_setting_device">Devices</string>
    <string name="message_setting_share">Shared</string>
    <string name="click_see_solution">View more</string>
    <string name="select_all">Select all</string>
    <string name="prompt_delete_select_msg">Are you sure you want to delete the selected messages?</string>
    <string name="cancel_all">Cancel</string>
    <string name="prompt_select_delete_msg">Please select messages you want to delete.</string>
    <string name="error_msg_type">/</string>
    <string name="account">Account ID:</string>
    <string name="setting_avatar_nick">Profile</string>
    <string name="setting_avatar">Profile Photo</string>
    <string name="set_nick">User Name</string>
    <string name="reject">Reject</string>
    <string name="cancel">Cancel</string>
    <string name="empty_wifi_name">Select or enter Wi-Fi network name</string>
    <string name="causes_network_config">Causes of network configuration failure</string>
    <string name="contact_customer_service">If you still cannot solve the network configuration problem, please contact our customer service.</string>
    <string name="text_choose_wifi">Choose Wi-Fi</string>
    <string name="text_saved_wifi">Saved Wi-Fi</string>
    <string name="text_choose_other_wifi">Choose other Wi-Fi</string>
    <string name="text_correct_input_wifi_info">Please make sure that you have entered the correct account and password for your home Wi-Fi.</string>
    <string name="text_save_wifi_info">Save Wi-Fi</string>
    <string name="text_add_wifi_more">Add multiple Wi-Fis</string>
    <string name="text_add_wifi_more_tips_1">1. Users can add multiple Wi-Fis to the device.</string>
    <string name="text_add_wifi_more_tips_2">2. If there is more than one Wi-Fi at your home, you can go to \"Settings\" &gt; \"Wi-Fi management\" &gt; \"Add Wi-Fi\" to add multiple Wi-Fis to your device.</string>
    <string name="text_add_wifi_more_tips_3">3. When the current Wi-Fi signal is weak, the device will automatically switch to a stronger signal.</string>
    <string name="text_title_add_new_wifi">Add Wi-Fi</string>
    <string name="video_call_accept">Accept</string>
    <string name="video_call_invite">invites you to a video call.</string>
    <string name="alexa_auth_request_title">Want to control the robot with Alexa?</string>
    <string name="alexa_auth_content_title">Tap "Allow" button \nLink your MOVAhome account with Alexa.</string>
    <string name="text_alexa_bind_agree">Allow</string>
    <string name="text_alexa_bind_reject">Later</string>
</resources>