<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fl_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="136dp"
        android:background="@drawable/common_shape_white_r8"
        android:orientation="vertical"
        android:paddingBottom="20dp">
        <TextView
            android:id="@+id/tv_device_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp"
            android:gravity="center_horizontal"
            android:maxLines="2"
            android:paddingHorizontal="24dp"
            android:text="@string/text_add_wifi_more"
            android:textAlignment="gravity"
            android:textColor="@color/common_textMain"
            android:textSize="@dimen/common_textLarge"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_add_wifi_more_tips_1"
            android:textColor="@color/common_textNormal"
            android:textSize="@dimen/common_textLarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_add_wifi_more_tips_2"
            android:textColor="@color/common_textNormal"
            android:textSize="@dimen/common_textLarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_add_wifi_more_tips_3"
            android:textColor="@color/common_textNormal"
            android:textSize="@dimen/common_textLarge" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="37dp"
            style="@style/common_style_button"
            android:gravity="center"
            android:text="@string/know"
            android:textSize="@dimen/common_textLarge" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>