<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fl_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/common_shape_white_r8"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:src="@drawable/icon_cancel" />

        <TextView
            android:id="@+id/tv_device_name"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:textAlignment="gravity"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:maxLines="2"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/rest_device_wifi"
            android:textColor="@color/common_textMain"
            android:textSize="@dimen/common_textSizeLarge4"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:lineHeight="20dp"
            android:text="@string/device_connect_prepare_tip_1"
            android:textColor="@color/common_textMain"
            android:textSize="@dimen/common_textNormal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:lineHeight="20dp"
            android:text="@string/device_connect_prepare_tip_2"
            android:textColor="@color/common_textMain"
            android:textSize="@dimen/common_textNormal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:lineHeight="20dp"
            android:text="@string/device_connect_prepare_tip_3"
            android:textColor="@color/common_textMain"
            android:textSize="@dimen/common_textNormal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="24dp"
            android:lineHeight="20dp"
            android:text="@string/device_connect_prepare_tip_4"
            android:textColor="@color/common_textMain"
            android:textSize="@dimen/common_textNormal" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>