<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/common_shape_white_top_r20"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:gravity="center"
        android:text="@string/text_choose_wifi"
        android:textAlignment="gravity"
        android:textColor="@color/common_textMain"
        android:textSize="@dimen/common_textLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_select_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:text="@string/text_saved_wifi"
        android:textColor="@color/common_textSecond"
        android:textSize="@dimen/common_textSmall" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_wifi_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="40dp"
        tools:itemCount="6"
        tools:listitem="@layout/item_save_wifi" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/common_divider"
        app:layout_constraintBottom_toTopOf="@id/tv_choose_wifi"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_choose_wifi"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:drawableEnd="@drawable/icon_arrow_right"
        android:gravity="center_vertical|start"
        android:text="@string/text_choose_other_wifi"
        android:textColor="@color/common_textMain"
        android:textSize="@dimen/common_textLarge" />

    <TextView
        android:id="@+id/tv_commit"
        style="@style/common_style_button2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textAlignment="gravity"
        android:textSize="@dimen/common_textLarge" />

</LinearLayout>