<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.dreame.module.view.CommonTitleView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:rightIcon="@drawable/icon_help"
        app:showRightImage="true"
        app:showRightText="false"
        app:title="@string/text_title_add_new_wifi"
        app:titleMarginStart="20dp"
        app:titleShowPosition="center"
        tools:layout_height='24dp' />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_wifi_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/input_wifi_tips"
            android:textColor="@color/common_textDisable"
            android:textSize="@dimen/common_textNormal" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_item"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/common_shape_white_text_r8">

        <android.dreame.module.view.input.LimitEditText
            android:id="@+id/et_wifi_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="3dp"
            android:background="@null"
            android:gravity="center_vertical|start"
            android:hint="@string/empty_wifi_name"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:textColor="@color/common_textMain"
            android:textColorHint="@color/common_textDisable"
            android:textCursorDrawable="@drawable/shape_input_cursor_color"
            android:textSize="@dimen/common_textLarge" />


        <ImageView
            android:id="@+id/iv_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="4dp"
            android:padding="8dp"
            android:src="@drawable/icon_arrow_down" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/common_shape_white_text_r8">

        <android.dreame.module.view.input.LimitEditText
            android:id="@+id/et_wifi_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="3dp"
            android:background="@null"
            android:gravity="center_vertical|start"
            android:hint="@string/enter_wifi_pwd"
            android:inputType="textVisiblePassword"
            android:textAlignment="viewStart"
            android:textColor="@color/common_textMain"
            android:textColorHint="@color/common_textDisable"
            android:textCursorDrawable="@drawable/shape_input_cursor_color"
            android:textSize="@dimen/common_textLarge" />


        <CheckBox
            android:id="@+id/cb_show_hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="11dp"
            android:button="@drawable/selector_pwd_show_hide" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_wifi_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_correct_input_wifi_info"
        android:textColor="@color/common_textDisable"
        android:textSize="@dimen/common_textSmall" />

    <TextView
        android:id="@+id/btn_next"
        style="@style/common_style_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="55dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/text_save_wifi_info"
        android:textAlignment="gravity"
        android:textSize="@dimen/common_textLarge" />
</LinearLayout>